# CE_simulate_dynamic

./: .gitignore  README.md  circular_ecosystem.py  config_gui.py  game.py  logger.py  matching.py  preference.py  product_category.py  product_factory.py  pyproject.toml  run.py  run_with_game.py  simulation_gui.py  visualization.py
config/: config.py  config_generator.py  setting_rs1.json
config/dynamic_price/: config_paas_1.0_manu_2.0_proc_2.0_rev_0.0.json
config/revenue_share/: config_paas_0.8_manu_1.8_proc_1.7_rev_0.2.json  config_paas_0.8_manu_1.8_proc_1.8_rev_0.2.json  config_paas_0.8_manu_1.8_proc_1.9_rev_0.2.json  config_paas_0.8_manu_1.8_proc_2.0_rev_0.0.json  config_paas_0.8_manu_1.8_proc_2.0_rev_0.2.json  config_paas_0.8_manu_1.9_proc_1.7_rev_0.2.json  config_paas_0.8_manu_1.9_proc_1.8_rev_0.2.json  config_paas_0.8_manu_1.9_proc_1.9_rev_0.2.json  config_paas_0.8_manu_1.9_proc_2.0_rev_0.0.json  config_paas_0.8_manu_1.9_proc_2.0_rev_0.2.json  config_paas_0.8_manu_2.0_proc_1.7_rev_0.2.json  config_paas_0.8_manu_2.0_proc_1.8_rev_0.2.json  config_paas_0.8_manu_2.0_proc_1.9_rev_0.2.json  config_paas_0.8_manu_2.0_proc_2.0_rev_0.0.json  config_paas_0.8_manu_2.0_proc_2.0_rev_0.2.json  config_paas_0.8_manu_2.1_proc_1.7_rev_0.2.json  config_paas_0.8_manu_2.1_proc_1.8_rev_0.2.json  config_paas_0.8_manu_2.1_proc_1.9_rev_0.2.json  config_paas_0.8_manu_2.1_proc_2.0_rev_0.0.json  (+106 more)
enablers/: business_model.py  policy.py  product.py
stakeholders/: consumer.py  manufacturer.py  paas_provider.py  provider.py  recycler.py  remanufacturer.py  reuse_provider.py
(+5 files in other folders)
