[tool.poetry]
name = "circular-ecosystem-simulation"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "circular_ecosystem_simulation", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "^2.2.1"
pandas = "^2.2.3"
rich = "^13.9.4"
pydantic = "^2.10.4"
setuptools = "^69.0.0"
wandb = "^0.19.2"
matplotlib = "^3.10.0"
plotly = "^5.24.1"
japanize-matplotlib = "^1.1.3"
seaborn = "^0.13.2"
scipy = "^1.15.1"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
